For more detailed instructions on filling in the ChangeLog form, see 
`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit> (in version.mak)

<standard changelog date stamp>
	* <changes go here...>

*******************************************************************************
post release patches:

1999-11-18    <layer@HOBART>

	* Doc0.el: more fixes for html generation
	* fi-emacs19.el: handle fi:lisp-listener-mode

1999-11-09  Kevin Layer  <layer@ultra>

	* Doc0.el: fixes for html generation

1999-08-25  Kevin Layer  <layer@ultra>

	* fi-lep.el: fix fi:lisp-complete-symbol for keywords

	* fi-ident.el: fix fi:lisp-comment-indent in xemacs 21 (fix from
	Frank.Schmuelling@gsfc.nasa.gov)

*******************************************************************************
2.0.21.16.15

1999-04-14    <layer@ANT>

	* Makefile: remove /bin/sh reference

*******************************************************************************
2.0.21.16.14

1999-04-01    <layer@HOBART>

	* fi-site-init: rfe3545: put load-time check for old emacsen 

*******************************************************************************
2.0.21.16.13

1999-03-19    <layer@OMEGA>

	* Makefile: for alpha nt (Interix)
	* emacsdir.pl: for alpha nt (Interix)

*******************************************************************************
2.0.21.16.12

1999-01-20  Kevin Layer  <layer@ultra>

	* fi-lep.el: protect against 'sendmail module not being there (as
	it isn't in XEmacs 21.0.62)
	* fi-site-init.el: fi::emacs-type for XEmacs 21
	* fi-subproc.el: workaround for bug in XEmacs 21; fix for XEmacs 21

*******************************************************************************
2.0.21.16.11

1999-02-08  Kevin Layer  <layer@ultra>

	* fi-site-init.el: fix NT predicate test (again, last fixed in
	version 2.0.21.16.9)

*******************************************************************************
2.0.21.16.10
