@@ -9,6 +9,10 @@ For more detailed instructions on filling in the ChangeLog form, see
 *******************************************************************************
 post release patches:
 
+1999-11-29  Kevin Layer  <layer@ultra>
+
+	* fi-lep.el: deal with warning
+
 1999-11-18    <layer@HOBART>
 
 	* Doc0.el: more fixes for html generation
